# rpl-blast

./: .gitignore  LICENSE  ONBOARDING.md  README.md  debug_serial.py  environment.yaml  requirements.txt  requirements_conda.txt  requirements_pip.txt  serial_test.py
.github/workflows/: ci.yml
BLAST_web/: requirements.txt
BLAST_web plotly subplot/: LOG_ANALYSIS_GUIDE.md  requirements.txt  run.py  test_error_recovery.py  test_load.py  test_logging.py  test_logging_system.py  test_long_running.py  test_timestamped_logs.py  testing_guide.md
BLAST_web plotly subplot/app/: DEPRECATION.md  __init__.py  config.py  config.yaml  logging_config.yaml
BLAST_web plotly subplot/logs/: blast_data_20250517_104610.csv  blast_data_20250517_105105.csv  blast_data_20250517_171755.csv  blast_data_20250517_173751.csv  blast_data_20250517_173817.csv  (+9 more)
BLAST_web/app/: config.py  (+1 more)
blast/: .coverage  FINAL_WORKING_GUIDE.md  MIGRATION_COMPLETE.md  QUICK_START.md  README_TESTING.md  USAGE_GUIDE.md  USER_GUIDE.md  USER_USAGE_GUIDE.md  blast_server.py  fixed_server.py  main.py  migration_config_converter.py  migration_server.py  pyproject.toml  pytest.ini  quick_config_fix.py  simple_simulator_test.py  test_migration.py
blast-rust/: Cargo.toml
blast-rust/blast-core/: Cargo.toml
blast-rust/blast-server/: Cargo.toml
blast-rust/blast-tauri/: Cargo.toml
blast/app/: __init__.py  main.py
blast/app/api/: frontend.py  router.py  websocket.py
blast/app/config/: __init__.py  settings.py
blast/app/core/: circuit_breaker.py  dependencies.py  exceptions.py  middleware.py  websocket_manager.py
blast/app/data_sources/: __init__.py  base.py  serial_reader.py  simulator.py
blast/app/migration/: __init__.py  flask_compatibility.py
blast/app/models/: __init__.py  calibration.py  sensors.py
blast/app/services/: calibration.py  data_acquisition.py
blast/app/static/css/: calibration.css
blast/app/static/js/: browser-monitor.js  calibration-manager.js  get_data.js  lc_stats.js  lc_subplots.js  pressure-display.js  pt_agg.js  websocket-manager.js
blast/app/templates/: base.html  index.html  pressure.html  thermocouples.html  valves.html
blast/blast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blast/scripts/: run_tests.py
blast/tests/: conftest.py  test_app.py  test_backend_services.py  test_calibration_models.py  test_calibration_service.py  test_config.py  test_data_sources.py  test_frontend.py  test_integration.py  test_performance.py  test_security.py  test_sensor_models.py  test_websocket.py  test_websocket_integration.py
scripts/: Setup Mac.command  Start App.command  Uninstall Mac.command  fix_permissions_mac.sh  setup_mac.sh  setup_win.bat  setup_win.ps1  start_mac.sh  start_win.bat  start_win.ps1  uninstall_mac.sh  uninstall_win.bat  uninstall_win.ps1
tools/: migrate_static.py  smoke_test_fastapi.py
(+101 files in other folders)
