[workspace]
members = [
    "blast-core",
    "blast-server",
    "blast-tauri",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["RPL Team"]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serial communication
serialport = "4.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "5.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"

# Testing
criterion = "0.5"